--- a/src/html/template-parts/sections/home/hero.html
+++ b/src/html/template-parts/sections/home/hero.html
@@ -1,1 +1,89 @@
-<section class="hero"></section>
+<section class="hero">
+	<div class="container">
+		<div class="hero__inner">
+			<div class="hero__heading">
+				<h1 class="h1">
+					Что делать с рублями в 2023 году?
+				</h1>
+				<div class="hero__info">
+					<h2 class="h2">
+						Преврати свои рубли в доходные активы
+					</h2>
+					<p class="hero__info_text">
+						Получи список 10 самых выгодных активов для успешных инвестиций и подробное описание торговой стратегии на 2023 год, в которой комплексно рассмотрены акции, облигации, металлы, сырьевые активы, обладающие потенциалом роста до конца текущего года.
+					</p>
+					<div class="button__wrapper">
+						<button class="button" type="button">
+							Получить
+						</button>
+					</div>
+				</div>
+			</div>
+			<div class="hero__cards">
+				<div class="hero__card">
+					<div class="hero__card_inner">
+						<div class="hero__inner_title">
+							<div class="hero__inner_img">
+								<img src="img/ico/percent.svg" width="" height="" alt="">
+							</div>
+							<h3 class="h3">
+								Узнай
+							</h3>
+						</div>
+						<p class="hero__inner_text">
+							Как действовать при дальнейшем понижении % ставок по депозитам
+						</p>
+					</div>
+				</div>
+				<div class="hero__card">
+					<div class="hero__card_inner">
+						<div class="hero__inner_title">
+							<div class="hero__inner_img">
+								<img src="img/ico/up.svg" width="" height="" alt="">
+							</div>
+							<h3 class="h3">
+								Узнай
+							</h3>
+						</div>
+						<p class="hero__inner_text">
+							Какие действия можно предпринять при рекордной инфляции
+						</p>
+					</div>
+				</div>
+				<div class="hero__card">
+					<div class="hero__card_inner">
+						<div class="hero__inner_title">
+							<div class="hero__inner_img">
+								<img src="img/ico/oil.svg" width="" height="" alt="">
+							</div>
+							<h3 class="h3">
+								Будь в курсе
+							</h3>
+						</div>
+						<p class="hero__inner_text">
+							Какие действия можно предпринять при рекордной инфляции
+						</p>
+					</div>
+				</div>
+				<div class="hero__card">
+					<div class="hero__card_inner">
+						<div class="hero__inner_title">
+							<div class="hero__inner_img">
+								<img src="img/ico/oil.svg" width="" height="" alt="">
+							</div>
+							<h3 class="h3">
+								Посмотри
+							</h3>
+						</div>
+						<p class="hero__inner_text">
+							Какие компании в РФ обладают самыми высоким потенциалом в +30% и позволят получать прибыль
+						</p>
+					</div>
+					<div class="hero__gold">
+						<img src="img/gold.png" width="284" height="210" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
