--- a/src/html/thankyou.html
+++ b/src/html/thankyou.html
@@ -1,4 +1,4 @@
-@@include( 'template-parts/header/header.html', { title: 'Dizib.ru' } )
+@@include( 'template-parts/header/header.html', { title: 'Thank You!' } )
 
 <main>
 	@@include( 'template-parts/sections/home/hero.html' )
