--- a/src/html/template-parts/footer/footer.html
+++ b/src/html/template-parts/footer/footer.html
@@ -1,4 +1,22 @@
-		<footer class="footer"></footer>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__wrapper">
+					<div class="footer__left">
+						<p class="footer__text">
+							ООО «Аналитическая компания ЭКСИС»
+						</p>
+						<a href="mailto:info@dizib.ru" class="footer__mail">
+							info@dizib.ru
+						</a>
+					</div>
+					<div class="footer__right">
+						<a href="#" class="footer__link">
+							Политика конфиденциальности
+						</a>
+					</div>
+				</div>
+			</div>
+		</footer>
 	</div><!-- .wrapper -->
 
 	<script src="js/main.min.js"></script>
